# prodigy-llvm-pass

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  test.sh
include/: ProdigyDIG.h  ProdigyRuntime.h
src/: AllocInfo.h  BasePointerTracker.cpp  BasePointerTracker.h  DIGInsertion.cpp  DIGInsertion.h  ElementSizeInference.cpp  ElementSizeInference.h  IndirectionDetector.cpp  IndirectionDetector.h  Makefile  ProdigyPass.cpp  ProdigyPass.h  ProdigyRuntime.cpp  ProdigyTypes.h  dig_print.h
test/: run_element_size_test.sh  run_test.sh  test_complex_ranged.c  test_edge_cases.c  test_element_size_detection.c  test_mixed_sizes.c  test_pointer_arrays.c  test_ranged_indirection.c  test_simple_ranged.c  test_single_valued.c  test_trigger_edge.c
